<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".fragments.FragmentIBU">

    <LinearLayout
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/yellow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/brew"
            android:textColor="@color/yellow"
            android:textSize="20dp"

            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/yellow" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/volume"
                android:textColor="@color/gray"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/volume"
                android:layout_width="68dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textColor="@color/gray" />

            <TextView
                android:id="@+id/unitVolume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/unitGravity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/gravity"
                android:layout_width="68dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textColor="@color/gray" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/middlePanel"
        android:layout_below="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/yellow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/hop"
            android:textColor="@color/yellow"
            android:textSize="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/yellow" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/weight"
                    android:textColor="@color/gray" />

                <EditText
                    android:id="@+id/weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textColor="@color/gray" />

                <TextView
                    android:id="@+id/unitWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/acid"
                    android:textColor="@color/gray" />

                <EditText
                    android:id="@+id/acid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textColor="@color/gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="%"
                    android:textColor="@color/gray" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/boil"
                    android:textColor="@color/gray" />

                <EditText
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColor="@color/gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="min"
                    android:textColor="@color/gray" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/add"
            android:textColor="@color/yellow" />
        <LinearLayout
            android:id="@+id/bottomPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/yellow"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/totalIBU"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <ImageButton
                    android:id="@+id/btnReset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/yellow"
                    android:src="@android:drawable/ic_popup_sync"
                    android:tint="@color/white" />

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="3px"
                android:background="@color/yellow" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/weight"
                    android:textAlignment="center"
                    android:textColor="@color/gray" />

                <View
                    android:layout_width="3px"
                    android:layout_height="match_parent"
                    android:background="@color/yellow" />


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/acid"
                    android:textAlignment="center"
                    android:textColor="@color/gray" />

                <View
                    android:layout_width="3px"
                    android:layout_height="match_parent"
                    android:background="@color/yellow" />


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/boil"
                    android:textAlignment="center"
                    android:textColor="@color/gray" />

                <View
                    android:layout_width="3px"
                    android:layout_height="match_parent"
                    android:background="@color/yellow" />


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/ibu"
                    android:textAlignment="center"
                    android:textColor="@color/gray" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="3px"
                android:background="@color/yellow" />

        </LinearLayout>

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dividerHeight="3px" />


    </LinearLayout>



</RelativeLayout>